Fix title overflowing from section item element

--- a/app/assets/stylesheets/section.css
+++ b/app/assets/stylesheets/section.css
@@ -73,10 +73,11 @@
   overflow: auto;
   white-space: nowrap;
   padding: 10px;
-}
-
-.section {
   height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 10px;
+
   form {
     display: flex;
     flex-flow: row nowrap;
@@ -92,12 +93,12 @@
   }
 
   .item {
-    display: inline-grid;
-    grid-template-rows: 50% 50%;
-    grid-template-areas:
-      "section-item-top"
-      "section-item-bottom";
-    height: 100px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-content: space-around;
+    justify-content: center;
+    gap: 10px;
+    height: 100%;
     width: 250px;
     padding: 10px;
     background-color: var(--bg-dark);
@@ -109,16 +110,14 @@
 
   .item-top {
     display: flex;
-    width: 100%;
-    flex-wrap: nowrap;
-    grid-area: section-item-top;
-    padding: 5px;
   }
 
   .item-title {
     order: 0;
     cursor: pointer;
-    text-overflow: clip;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     a {
       color: var(--accent);
